AO3-4477 Fix homepage inbox reply form being cut off

--- a/public/stylesheets/site/2.0/16-zone-system.css
+++ b/public/stylesheets/site/2.0/16-zone-system.css
@@ -21,7 +21,6 @@ SUBSECTIONS:
 .splash {
   margin: auto;
   max-width: 78em;
-  overflow: hidden;
 }
 
 .splash .module h3 {
